部分主题添加,点击时间可切换主题 胎压界面和导航部分

--- a/mobile/src/main/res/drawable/n_dh2_bg_b.xml
+++ b/mobile/src/main/res/drawable/n_dh2_bg_b.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
     <gradient
         android:angle="270"
-        android:endColor="#667081"
-        android:startColor="#818ca2" />
+        android:endColor="#404751"
+        android:startColor="#505865" />
     <corners android:radius="10dp" />
 </shape>
