--- a/mobile/src/main/res/drawable/n_desk_bg_b.xml
+++ b/mobile/src/main/res/drawable/n_desk_bg_b.xml
@@ -2,8 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:angle="270"
-        android:endColor="#667081"
-        android:startColor="#818ca2" />
-    <corners android:radius="10dp" />
+        android:angle="225"
+        android:endColor="#29313e"
+        android:startColor="#313f5c" />
 </shape>
