--- a/mobile/src/main/res/drawable/n_l_item2_bg_b.xml
+++ b/mobile/src/main/res/drawable/n_l_item2_bg_b.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:angle="270"
-        android:endColor="#667081"
-        android:startColor="#818ca2" />
+        android:angle="225"
+        android:endColor="#232732"
+        android:startColor="#242f41" />
     <corners android:radius="10dp" />
 </shape>
