--- a/mobile/src/main/res/drawable/n_ty_bg_b.xml
+++ b/mobile/src/main/res/drawable/n_ty_bg_b.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
     <gradient
         android:angle="270"
-        android:endColor="#667081"
-        android:startColor="#818ca2" />
+        android:endColor="#454f62"
+        android:startColor="#646f81" />
     <corners android:radius="10dp" />
 </shape>
