--- a/mobile/src/main/res/layout/activity_lanncher.xml
+++ b/mobile/src/main/res/layout/activity_lanncher.xml
@@ -25,7 +25,7 @@
         <View
             android:layout_width="1dp"
             android:layout_height="match_parent"
-            android:background="#c6d2d9" />
+            android:background="?line" />
 
         <com.zhy.android.percent.support.PercentLinearLayout
             android:layout_width="0dp"
