--- a/mobile/src/main/res/layout/content_l_amap.xml
+++ b/mobile/src/main/res/layout/content_l_amap.xml
@@ -60,7 +60,7 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:background="#c1cad1" />
+                    android:background="?line" />
 
                 <com.zhy.android.percent.support.PercentLinearLayout
                     android:layout_width="match_parent"
@@ -94,7 +94,7 @@
                         android:layout_height="match_parent"
                         android:layout_marginTop="10dp"
                         android:layout_marginBottom="10dp"
-                        android:background="#c1cad1" />
+                        android:background="?line" />
 
                     <com.zhy.android.percent.support.PercentLinearLayout
                         android:id="@+id/btn_nav_j"
@@ -116,7 +116,7 @@
                         android:layout_height="match_parent"
                         android:layout_marginTop="10dp"
                         android:layout_marginBottom="10dp"
-                        android:background="#c1cad1" />
+                        android:background="?line" />
 
                     <com.zhy.android.percent.support.PercentLinearLayout
                         android:id="@+id/btn_nav_gs"
@@ -274,7 +274,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="#c1cad1" />
+                android:background="?line" />
 
             <com.zhy.android.percent.support.PercentLinearLayout
                 android:layout_width="match_parent"
@@ -302,7 +302,7 @@
                     android:layout_height="match_parent"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp"
-                    android:background="#c1cad1" />
+                    android:background="?line" />
 
                 <TextView
                     android:id="@+id/tv_msg"
@@ -318,7 +318,7 @@
                     android:layout_height="match_parent"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp"
-                    android:background="#c1cad1" />
+                    android:background="?line" />
 
                 <com.zhy.android.percent.support.PercentLinearLayout
                     android:id="@+id/btn_close"
