--- a/mobile/src/main/res/layout/content_l_music.xml
+++ b/mobile/src/main/res/layout/content_l_music.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/n_l_item2_bg"
+    android:background="?l_item2"
     tools:ignore="HardcodedText,RtlHardcoded">
 
     <com.zhy.android.percent.support.PercentLinearLayout
@@ -27,7 +27,7 @@
                 android:includeFontPadding="false"
                 android:lines="1"
                 android:text="音乐"
-                android:textColor="#101933"
+                android:textColor="?l_text1"
                 app:layout_textSizePercent="50%h" />
         </com.zhy.android.percent.support.PercentFrameLayout>
 
@@ -105,7 +105,7 @@
                 android:layout_height="0dp"
                 android:contentDescription="@string/app_name"
                 android:scaleType="fitCenter"
-                android:src="@mipmap/ic_prev"
+                android:src="?ic_prev"
                 app:layout_heightPercent="77%h"
                 app:layout_marginRightPercent="20%h"
                 app:layout_widthPercent="77%h" />
@@ -116,7 +116,7 @@
                 android:layout_height="0dp"
                 android:contentDescription="@string/app_name"
                 android:scaleType="fitCenter"
-                android:src="@mipmap/ic_play"
+                android:src="?ic_play"
                 app:layout_heightPercent="100%h"
                 app:layout_widthPercent="100%h" />
 
@@ -126,7 +126,7 @@
                 android:layout_height="0dp"
                 android:contentDescription="@string/app_name"
                 android:scaleType="fitCenter"
-                android:src="@mipmap/ic_next"
+                android:src="?ic_next"
                 app:layout_heightPercent="77%h"
                 app:layout_marginLeftPercent="20%h"
                 app:layout_widthPercent="77%h" />
