--- a/mobile/src/main/res/layout/content_l_prompt.xml
+++ b/mobile/src/main/res/layout/content_l_prompt.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/n_dock_bg">
+    android:background="?prompt_bg">
 
     <TextView
         android:id="@+id/tv_time"
@@ -12,7 +12,7 @@
         android:layout_height="match_parent"
         android:gravity="center"
         android:text="1月1日 星期一 23:59:59"
-        android:textColor="#666666"
+        android:textColor="?l_text1"
         app:layout_textSizePercent="50%h" />
 
     <com.zhy.android.percent.support.PercentLinearLayout
@@ -32,7 +32,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:layout_centerInParent="true"
-                android:src="@mipmap/n_home"
+                android:src="?home"
                 app:layout_heightPercent="50%h" />
         </com.zhy.android.percent.support.PercentRelativeLayout>
 
