--- a/mobile/src/main/res/layout/content_l_weather.xml
+++ b/mobile/src/main/res/layout/content_l_weather.xml
@@ -71,7 +71,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="#dbe2e5"
+            android:background="?line"
             app:layout_marginTopPercent="4%h" />
 
         <com.zhy.android.percent.support.PercentLinearLayout
