--- a/mobile/src/main/res/values/styles.xml
+++ b/mobile/src/main/res/values/styles.xml
@@ -27,6 +27,7 @@
         <item name="desk_bg">@drawable/n_desk_bg</item>
 
         <item name="dh_dh">@mipmap/n_dh_dh</item>
+        <item name="dh2_bg">@drawable/n_dh2_bg</item>
         <item name="dh_gs">@mipmap/n_dh_gs</item>
         <item name="dh_j">@mipmap/n_dh_j</item>
         <item name="dh_quan">@mipmap/n_dh_quan</item>
@@ -41,7 +42,9 @@
         <item name="ic_next">@mipmap/ic_next</item>
 
         <item name="line">#c6d2d9</item>
+
         <item name="home">@mipmap/n_home</item>
+        <item name="car">@mipmap/n_car</item>
     </style>
 
     <style name="AppThemeBlack" parent="AppTheme">
@@ -56,6 +59,7 @@
         <item name="desk_bg">@drawable/n_desk_bg_b</item>
 
         <item name="dh_dh">@mipmap/n_dh_dh_b</item>
+        <item name="dh2_bg">@drawable/n_dh2_bg_b</item>
         <item name="dh_gs">@mipmap/n_dh_gs_b</item>
         <item name="dh_j">@mipmap/n_dh_j_b</item>
         <item name="dh_quan">@mipmap/n_dh_quan_b</item>
@@ -69,7 +73,9 @@
         <item name="ic_next">@mipmap/ic_next_b</item>
 
         <item name="line">#666f80</item>
+
         <item name="home">@mipmap/n_home_b</item>
+        <item name="car">@mipmap/n_car_b</item>
     </style>
 
     <style name="Interval">
