部分主题添加,点击时间可切换主题

--- a/mobile/src/main/res/layout/content_l_amap.xml
+++ b/mobile/src/main/res/layout/content_l_amap.xml
@@ -12,8 +12,7 @@
     <com.zhy.android.percent.support.PercentFrameLayout
         android:id="@+id/rl_moren"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone">
+        android:layout_height="match_parent">
 
         <com.wow.carlauncher.common.view.CustomRoundAngleImageView
             android:layout_width="match_parent"
