--- a/mobile/src/main/res/layout/content_l_page1.xml
+++ b/mobile/src/main/res/layout/content_l_page1.xml
@@ -14,6 +14,7 @@
         app:cardBackgroundColor="@android:color/transparent"
         app:cardCornerRadius="10dp"
         app:cardElevation="10dp"
+        app:cardLightDirection="none"
         app:cardPreventCornerOverlap="false"
         app:cardShadowEndColor="#01000000"
         app:cardShadowStartColor="#20000000"
@@ -33,6 +34,7 @@
         app:cardBackgroundColor="@android:color/transparent"
         app:cardCornerRadius="10dp"
         app:cardElevation="10dp"
+        app:cardLightDirection="none"
         app:cardPreventCornerOverlap="false"
         app:cardShadowEndColor="#01000000"
         app:cardShadowStartColor="#20000000"
@@ -52,6 +54,7 @@
         app:cardBackgroundColor="@android:color/transparent"
         app:cardCornerRadius="10dp"
         app:cardElevation="10dp"
+        app:cardLightDirection="none"
         app:cardPreventCornerOverlap="false"
         app:cardShadowEndColor="#01000000"
         app:cardShadowStartColor="#20000000"
