--- a/mobile/src/main/res/layout/content_l_page2.xml
+++ b/mobile/src/main/res/layout/content_l_page2.xml
@@ -13,6 +13,7 @@
         app:cardBackgroundColor="@android:color/transparent"
         app:cardCornerRadius="10dp"
         app:cardElevation="10dp"
+        app:cardLightDirection="none"
         app:cardPreventCornerOverlap="false"
         app:cardShadowEndColor="#01000000"
         app:cardShadowStartColor="#20000000"
@@ -31,6 +32,7 @@
         app:cardBackgroundColor="@android:color/transparent"
         app:cardCornerRadius="10dp"
         app:cardElevation="10dp"
+        app:cardLightDirection="none"
         app:cardPreventCornerOverlap="false"
         app:cardShadowEndColor="#01000000"
         app:cardShadowStartColor="#20000000"
@@ -49,6 +51,7 @@
         app:cardBackgroundColor="@android:color/transparent"
         app:cardCornerRadius="10dp"
         app:cardElevation="10dp"
+        app:cardLightDirection="none"
         app:cardPreventCornerOverlap="false"
         app:cardShadowEndColor="#01000000"
         app:cardShadowStartColor="#20000000"
